--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,7 +64,7 @@ body {
   }
   
   .topbar {
-    @apply sticky top-0 z-30 flex w-full items-center justify-between bg-card p-1 min-h-[78px];
+    @apply sticky top-0 z-30 flex w-full items-center justify-end bg-card px-4 min-h-[78px];
   }
 }
 
