add route to handle Steam logout; add shadcn avatar and dropdownmenu

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,7 +67,7 @@ body {
   }
   
   body {
-    @apply flex flex-col justify-center items-center text-white;
+    @apply flex flex-col justify-center items-center;
   }
 }
 
