--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,7 +73,7 @@ body {
 
 @layer components {
   .main {
-    @apply flex bg-background justify-center h-full w-full px-6;
+    @apply flex bg-background justify-center h-full w-[90%];
   }
   
   .topbar {
